# SepKits

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: CopyFiles.cmake
i18n/: SepKits_en.ts  SepKits_zh_CN.ts  SepKits_zh_TW.ts
resources/: fonts.qrc  icons.qrc  images.qrc  versioninfo.rc
src/: LanguageManager.cpp  Main.qml  SettingsStore.cpp  SettingsStore.h  SystemTrayHelper.h  main.cpp
src/backend/models/: CacheCleanerModel.cpp  CacheCleanerModel.h
src/backend/utils/: ImageCompressor.cpp  ImageCompressor.h  LanguageManager.h  Logger.cpp  Logger.h  LoremIpsumGenerator.cpp  LoremIpsumGenerator.h  MediaFormatConverter.cpp  MediaFormatConverter.h  NetworkSpeedTest.cpp  NetworkSpeedTest.h  SettingsStore.cpp  SettingsStore.h  SystemCacheCleaner.cpp  SystemCacheCleaner.h  SystemTrayHelper.cpp  TrayMenuHelper.cpp  TrayMenuHelper.h  WatermarkProcessor.cpp  WatermarkProcessor.h
src/components/: BackButton.qml  Card.qml  CategoryPageHeader.qml  ComboBox.qml  Dialog.qml  DialogManager.qml  HdSvgIcon.qml  IconButton.qml  Line.qml  LoadingPage.qml  MainMenu.qml  MainMenuBar.qml  MainTitleBar.qml  PathSelector.qml  PrimaryButton.qml  SecondaryButton.qml  SepColorPicker.qml  SepComboBox.qml  SepProgressBar.qml  SepSlider.qml  ShortcutInput.qml  SpeedGauge.qml  SvgIcon.qml  SystemButton.qml  ToolCard.qml  ToolsPage.qml  WindowSidebar.qml  WindowTitleBar.qml
src/shared/: MainMenuLists.qml
src/style/: AppSettings.qml  Color.qml  Font.qml  FontAwesome.qml  MaterialSymbols.qml  PinnedTools.qml  Theme.qml  ToolMeta.qml
src/style/themes/: DarkTheme.qml  DefaultTheme.qml  LightTheme.qml
src/views/: AboutPage.qml  CodeFormatterCompressor.qml  ColorThemePicker.qml  DevToolsPage.qml  FileSizeCompressor.qml  HomePage.qml  ImageCompression.qml  LoremIpsumGenerator.qml  MediaFormatConverter.qml  MediaToolsPage.qml  NetworkSpeedTest.qml  OtherToolsPage.qml  SettingsPage.qml  SystemCacheCleaner.qml  SystemToolsPage.qml  ThemeGenerator.qml  VideoWatermarkAdder.qml  WatermarkAdder.qml  WindowsAutoUpdateDisabler.qml
